package structural.file;

abstract class  SequenceAbstraction {
  
}
